@@ -3,6 +3,7 @@ Changes
 lib/PSGI/Hector.pm
 lib/PSGI/Hector/Base.pm
 lib/PSGI/Hector/Log.pm
+lib/PSGI/Hector/Middleware.pm
 lib/PSGI/Hector/Request.pm
 lib/PSGI/Hector/Response.pm
 lib/PSGI/Hector/Response/Base.pm
@@ -11,13 +12,14 @@ lib/PSGI/Hector/Response/Raw.pm
 lib/PSGI/Hector/Response/TemplateToolkit.pm
 lib/PSGI/Hector/Session.pm
 lib/PSGI/Hector/Utils.pm
-Makefile.PL
 MANIFEST			This list of files
-META.json
-META.yml
 README
 script/hector_hello.psgi
 t/00_use.t
 t/01_hector.t
 t/02_response_raw.t
 t/03_pod.t
+t/04_session.t
+Makefile.PL
+META.yml
+META.json
