@@ -60,7 +60,9 @@ sub new{
 
 MacGyveR <dumb@cpan.org>
 
-Development questions, bug reports, and patches are welcome to the above address
+Development questions, bug reports, and patches are welcome to the above address.
+
+=head1 See Also
 
 =head1 Copyright
 
