@@ -114,7 +114,9 @@ See L<PSGI::Hector::Response::SimpleTemplate> for details.
 
 MacGyveR <dumb@cpan.org>
 
-Development questions, bug reports, and patches are welcome to the above address
+Development questions, bug reports, and patches are welcome to the above address.
+
+=head1 See Also
 
 =head1 Copyright
 
