@@ -2,7 +2,7 @@ use strict;
 use warnings;
 use Test::More;
 use lib qw(lib ../lib);
-plan(tests => 11);
+plan(tests => 12);
 #1
 use_ok("PSGI::Hector");
 #2
@@ -25,3 +25,5 @@ use_ok("PSGI::Hector::Response::NotModified");
 use_ok("PSGI::Hector::Response::Raw");
 #11
 use_ok("PSGI::Hector::Response::TemplateToolkit");
+#12
+use_ok("PSGI::Hector::Middleware");
